[tool.poetry]
name = "ms-build-at-hackathon-2024"
version = "0.1.0"
description = "Repo for market research bot"
authors = ["harisyam manda <mnv.harisyam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.14"
langchain-community = "^0.0.31"
langchain-openai = ">=0.0.5,<0.0.6"
langchain-groq = "^0.1.0"
langgraph = "^0.0.32"
python-dotenv = "^1.0.0"
tavily-python = "^0.3.3"
crewai = {extras = ["tools"], version = "^0.22.5"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
